Side bar overflow fixed

--- a/src/components/Dashboard/Sidebar/sidebar.css
+++ b/src/components/Dashboard/Sidebar/sidebar.css
@@ -4,7 +4,8 @@
     padding : 10px;
     padding-right : 30px;
     width: 280px;
-    height: 100Vw;
+    height: 100vh;
+    overflow: auto;
     border-right: 1px dashed rgba(15, 15, 15, 0.473);
     background-color: rgba(248,249,250);
 
